@@ -22,7 +22,7 @@
     "SourceIp": "192.0.2.55",
     "SourcePort": 54321,
     "InfringedMaterial": 2,
-    "InfringingUrl": 6,
+    "SourceUrl": 6,
     "MaterialType": 3,
     "FileName": "badexamplesong.mp3",
     "CourtOrder": "no"
